--- a/Farmstory2/src/main/webapp/WEB-INF/urlMapping.properties
+++ b/Farmstory2/src/main/webapp/WEB-INF/urlMapping.properties
@@ -5,6 +5,8 @@
 /user/login.do=kr.co.farmstory2.service.user.LoginService
 /user/terms.do=kr.co.farmstory2.service.user.TermsService
 /user/register.do=kr.co.farmstory2.service.user.RegisterService
+/user/checkUid.do=kr.co.farmstory2.service.user.CheckUidService
+/user/logout.do=kr.co.farmstory2.service.user.LogoutService
 
 /board/list.do=kr.co.farmstory2.service.board.ListService
 /board/write.do=kr.co.farmstory2.service.board.WriteService
